--- a/CyberTutorial.WebApp/Views/Shared/Register/RegisterCompanyPartial.cshtml
+++ b/CyberTutorial.WebApp/Views/Shared/Register/RegisterCompanyPartial.cshtml
@@ -1,4 +1,183 @@
-﻿@model RegisterCompanyModel
+﻿@model RegisterModel
 
-<form>
+<form asp-controller="Home" asp-action="Register" method="post" id="RegisterCompanyForm" novalidate>
+    <div class="mb-3">
+        <div class="toast error-toast-style w-100" role="alert" id="CompanyErrorToast">
+            <div class="toast-body">
+                Something went wrong. Please try again.
+                <button type="button" class="btn-close float-end" data-bs-dismiss="toast" aria-label="Close"></button>
+            </div>
+        </div>
+        <div class="toast error-toast-style w-100" role="alert" id="CompanyExistsToast">
+            <div class="toast-body">
+                Company with this email already exists.
+                <button type="button" class="btn-close float-end" data-bs-dismiss="toast" aria-label="Close"></button>
+            </div>
+        </div>
+    </div>
+    <label class="form-label mb-1">Full Name</label>
+    <div class="row mb-3">
+        <div class="col-6">
+            <div class="form-group">
+                <input asp-for="RegisterCompanyModel.OwnerFirstName" type="text" class="form-control bg-dark rounded-3 border-info text-white" id="OwnerFirstName" placeholder="First">
+                <span asp-validation-for="RegisterCompanyModel.OwnerFirstName" class="text-danger"></span>
+                <div class="valid-feedback">
+                    Looks good!
+                </div>
+            </div>
+        </div>
+        <div class="col-6">
+            <div class="form-group">
+                <input asp-for="RegisterCompanyModel.OwnerLastName" type="text" class="form-control bg-dark rounded-3 border-info text-white" id="OwnerLastName" placeholder="Last">
+                <span asp-validation-for="RegisterCompanyModel.OwnerLastName" class="text-danger"></span>
+                <div class="valid-feedback">
+                    Looks good!
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="mb-3">
+        <div class="form-group">
+            <label asp-for="RegisterCompanyModel.CompanyName" for="CompanyName" class="form-label">Business Name</label>
+            <input asp-for="RegisterCompanyModel.CompanyName" type="text" class="form-control bg-dark rounded-3 border-info text-white" id="CompanyName" placeholder="Business Name">
+            <span asp-validation-for="RegisterCompanyModel.CompanyName" class="text-danger"></span>
+            <div class="valid-feedback">
+                Looks good!
+            </div>
+        </div>
+    </div>
+    <div class="mb-3">
+        <div class="form-group">
+            <label asp-for="RegisterCompanyModel.OwnerEmiratesId" for="OwnerEmiratesId" class="form-label">Emirates Id</label>
+            <input asp-for="RegisterCompanyModel.OwnerEmiratesId" type="text" class="form-control bg-dark rounded-3 border-info text-white" id="OwnerEmiratesId" placeholder="xxx-xxxx-xxxxxxx-x">
+            <span asp-validation-for="RegisterCompanyModel.OwnerEmiratesId" class="text-danger"></span>
+            <div class="valid-feedback">
+                Looks good!
+            </div>
+        </div>
+    </div>
+
+    <label class="form-label mb-1">Address</label>
+    <div class="row mb-3">
+        <div class="col-6">
+            <div class="form-group">
+                <input asp-for="RegisterCompanyModel.StreetAddress" type="text" class="form-control bg-dark rounded-3 border-info text-white" id="StreetAddress" placeholder="Street Address">
+                <span asp-validation-for="RegisterCompanyModel.StreetAddress" class="text-danger"></span>
+                <div class="valid-feedback">
+                    Looks good!
+                </div>
+            </div>
+        </div>
+        <div class="col-6">
+            <div class="form-group">
+                <input asp-for="RegisterCompanyModel.State" type="text" class="form-control bg-dark rounded-3 border-info text-white" id="State" placeholder="State">
+                <span asp-validation-for="RegisterCompanyModel.State" class="text-danger"></span>
+                <div class="valid-feedback">
+                    Looks good!
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row mb-3">
+        <div class="col-6">
+            <div class="form-group">
+                <input asp-for="RegisterCompanyModel.Region" type="text" class="form-control bg-dark rounded-3 border-info text-white" id="Region" placeholder="Region">
+                <span asp-validation-for="RegisterCompanyModel.Region" class="text-danger"></span>
+                <div class="valid-feedback">
+                    Looks good!
+                </div>
+            </div>
+        </div>
+        <div class="col-6">
+            <div class="form-group">
+                <input asp-for="RegisterCompanyModel.Website" type="text" class="form-control bg-dark rounded-3 border-info text-white" id="Website" placeholder="Website">
+                <span asp-validation-for="RegisterCompanyModel.Website" class="text-danger"></span>
+                <div class="valid-feedback">
+                    Looks good!
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row mb-3">
+        <div class="col-6">
+            <div class="form-group">
+                <label asp-for="RegisterCompanyModel.PhoneNumber" for="PhoneNumber" class="form-label">Phone Number</label>
+                <input asp-for="RegisterCompanyModel.PhoneNumber" type="text" class="form-control bg-dark rounded-3 border-info text-white" id="PhoneNumber" placeholder="xx xxx xxxx">
+                <span asp-validation-for="RegisterCompanyModel.PhoneNumber" class="text-danger"></span>
+                <div class="valid-feedback">
+                    Looks good!
+                </div>
+            </div>
+        </div>
+        <div class="col-6">
+            <div class="form-group">
+                <label asp-for="RegisterCompanyModel.EmailAddress" for="EmailAddress" class="form-label">Email Address</label>
+                <input asp-for="RegisterCompanyModel.EmailAddress" type="email" class="form-control bg-dark rounded-3 border-info text-white" id="EmailAddress" placeholder="Email Address">
+                <span asp-validation-for="RegisterCompanyModel.EmailAddress" class="text-danger"></span>
+                <div class="valid-feedback">
+                    Looks good!
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row mb-5">
+        <div class="col-6">
+            <div class="form-group">
+                <label asp-for="RegisterCompanyModel.Password" for="Password" class="form-label">Password</label>
+                <input asp-for="RegisterCompanyModel.Password" type="password" class="form-control bg-dark rounded-3 border-info text-white" id="Password" placeholder="Password">
+                <span asp-validation-for="RegisterCompanyModel.Password" class="text-danger"></span>
+                <div class="valid-feedback">
+                    Looks good!
+                </div>
+            </div>
+        </div>
+        <div class="col-6">
+            <div class="form-group">
+                <label asp-for="RegisterCompanyModel.ConfirmPassword" for="ConfirmPassword" class="form-label">Confirm Password</label>
+                <input asp-for="RegisterCompanyModel.ConfirmPassword" type="password" class="form-control bg-dark rounded-3 border-info text-white" id="ConfirmPassword" placeholder="Confirm Password">
+                <span asp-validation-for="RegisterCompanyModel.ConfirmPassword" class="text-danger"></span>
+                <div class="valid-feedback">
+                    Looks good!
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="d-grid justify-content-start">
+        <button type="submit" class="btn btn-lg btn-info text-dark rounded-3" id="SignUpCompanyButton">
+            Sign Up
+        </button>
+    </div>
 </form>
+
+<div class="modal fade" id="CompanySuccessModal">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content bg-light">
+            <div class="modal-header border-0">
+                <button type="button" class="btn-close btn-close-dark" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <div class="row mb-3">
+                    <div class="col text-center">
+                        <h3 class="text-success text-wrap">
+                            Thanks! Your account has been successfully created.
+                        </h3>
+                    </div>
+                </div>
+
+                <div class="row mb-3">
+                    <div class="col text-center">
+                        <p class="text-secondary text-wrap">
+                            Please check your inbox, a code is sent on your email address,
+                            which will be required for the employees to register.
+                        </p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-4 d-grid mx-auto">
+                        <button type="button" class="btn btn-lg sucess-button-background rounded-pill" data-bs-dismiss="modal">OK</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
