--- a/CyberTutorial.WebApp/Views/Employee/Index.cshtml
+++ b/CyberTutorial.WebApp/Views/Employee/Index.cshtml
@@ -2,4 +2,17 @@
 @{
     Layout = "EmployeeLayout";
 }
-<h1 class="text-white text-center">EMPLOYEE PAGE</h1>
+<div class="toast-container position-absolute p-3 top-0 end-0 mt-5">
+    <div class="toast" id="LogoutErrorToast">
+        <div class="toast-header">
+            <svg class="bd-placeholder-img rounded me-2" width="20" height="20" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#007aff"></rect></svg>
+            <strong class="me-auto">Log out failed</strong>
+            <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+        </div>
+        <div class="toast-body">
+            You can try reloading the page. If the error persists, please try again in a few minutes.
+        </div>
+    </div>
+</div>
+
+@Html.Hidden("RedirectToHome", Url.Action("Index", "Home"));
