--- a/CyberTutorial.WebApp/Views/Shared/EmployeeLayout.cshtml
+++ b/CyberTutorial.WebApp/Views/Shared/EmployeeLayout.cshtml
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html lang="en" class="h-100">
+<html lang="en" class="em-html">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -10,84 +10,9 @@
     <link rel="stylesheet" href="~/lib/font-awesome/css/all.css" />
 </head>
 
-<body class="d-flex flex-column h-100">
-    <header>
-        <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-            <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Cyber Tutorial</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
-                        aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse d-sm-inline-flex justify-content-between" id="navbarCollapse">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Courses</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Exams</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Performance</a>
-                        </li>
-                    </ul>
-                    <a class="btn btn-lg btn-outline-light" data-bs-toggle="modal" href="#LoginModal" role="button">Logout</a>
-                </div>
-            </div>
-        </nav>
-    </header>
+<body class="em-body">
+    @RenderBody()
 
-    <main class="flex-shrink-0">
-        <div class="container-fluid">
-            @RenderBody()
-        </div>
-    </main>
-
-    <footer class="footer mt-auto bg-dark p-lg-4">
-        <div class="container">
-            <div class="row g-lg-0 text-white text-center justify-content-center">
-                <div class="row g-lg-3 justify-content-center">
-                    <div class="col-lg-auto">
-                        <a class="text-white" href="https://www.google.com">
-                            <i class="fa-brands fa-2x fa-twitter"></i>
-                        </a>
-                    </div>
-                    <div class="col-lg-auto">
-                        <a class="text-white" href="https://www.google.com">
-                            <i class="fa-brands fa-2x fa-instagram"></i>
-                        </a>
-                    </div>
-                    <div class="col-lg-auto">
-                        <a class="text-white" href="https://www.google.com">
-                            <i class="fa-brands fa-2x fa-linkedin"></i>
-                        </a>
-                    </div>
-                </div>
-                <nav class="navbar navbar-expand-md navbar-dark justify-content-center">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-controller="Pricing" asp-action="Index">Pricing</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-controller="FAQ" asp-action="Index">FAG</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-controller="AboutUs" asp-action="Index">About Us</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-controller="Contact" asp-action="Index">Contact</a>
-                        </li>
-                    </ul>
-                </nav>
-                <div class="row text-center">
-                    <p class="text-white fw-lighter">©2022 Cyber Tutorial</p>
-                </div>
-            </div>
-        </div>
-    </footer>
     <script src="~/lib/Chart.js/chart.js"></script>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
