--- a/CyberTutorial.WebApp/Views/Shared/Register/RegisterEmployeePartial.cshtml
+++ b/CyberTutorial.WebApp/Views/Shared/Register/RegisterEmployeePartial.cshtml
@@ -1,5 +1,152 @@
-﻿@model RegisterEmployeeModel
+﻿@model RegisterModel
 
-<form>
-
+<form asp-controller="Home" asp-action="Register" method="post" id="RegisterEmployeeForm" novalidate>
+    <div class="mb-3">
+        <div class="toast error-toast-style w-100" role="alert" id="EmployeeErrorToast">
+            <div class="toast-body">
+                Something went wrong. Please try again.
+                <button type="button" class="btn-close float-end" data-bs-dismiss="toast" aria-label="Close"></button>
+            </div>
+        </div>
+        <div class="toast error-toast-style w-100" role="alert" id="CompanyNotFoundToast">
+            <div class="toast-body">
+                Company with given id does not exist.
+                <button type="button" class="btn-close float-end" data-bs-dismiss="toast" aria-label="Close"></button>
+            </div>
+        </div>
+        <div class="toast error-toast-style w-100" role="alert" id="EmployeeFoundToast">
+            <div class="toast-body">
+                Employee with this email already exists.
+                <button type="button" class="btn-close float-end" data-bs-dismiss="toast" aria-label="Close"></button>
+            </div>
+        </div>
+    </div>
+    <label class="form-label mb-1">Full Name</label>
+    <div class="row mb-3">
+        <div class="col-6">
+            <div class="form-group">
+                <input asp-for="RegisterEmployeeModel.FirstName" type="text" class="form-control bg-dark rounded-3 border-info text-white" id="FirstName" placeholder="First">
+                <span asp-validation-for="RegisterEmployeeModel.FirstName" class="text-danger"></span>
+                <div class="valid-feedback">
+                    Looks good!
+                </div>
+            </div>
+        </div>
+        <div class="col-6">
+            <div class="form-group">
+                <input asp-for="RegisterEmployeeModel.LastName" type="text" class="form-control bg-dark rounded-3 border-info text-white" id="LastName" placeholder="Last">
+                <span asp-validation-for="RegisterEmployeeModel.LastName" class="text-danger"></span>
+                <div class="valid-feedback">
+                    Looks good!
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="mb-3">
+        <div class="form-group">
+            <label asp-for="RegisterEmployeeModel.CompanyId" for="CompanyName" class="form-label">Company Id</label>
+            <input asp-for="RegisterEmployeeModel.CompanyId" type="text" class="form-control bg-dark rounded-3 border-info text-white" id="CompanyId" placeholder="xxxxxxxxxxxx">
+            <span asp-validation-for="RegisterEmployeeModel.CompanyId" class="text-danger"></span>
+            <div class="valid-feedback">
+                Looks good!
+            </div>
+        </div>
+    </div>
+    <div class="row mb-3">
+        <div class="col-6">
+            <label asp-for="RegisterEmployeeModel.Gender" for="GenderComboBox" class="form-label">Gender</label>
+            <select asp-for="RegisterEmployeeModel.Gender" class="form-select custom-selectform-arrow bg-dark text-white rounded-3 border-info" id="GenderComboBox">
+                <option selected>Male</option>
+                <option>Female</option>
+            </select>
+            <span asp-validation-for="RegisterEmployeeModel.Gender" class="text-danger"></span>
+        </div>
+        <div class="col-6">
+            <label asp-for="RegisterEmployeeModel.DateOfBirth" for="DateOfBirth" class="form-label">Date Of Birth</label>
+            <input asp-for="RegisterEmployeeModel.DateOfBirth" type="date" class="form-control bg-dark text-white rounded-3 border-info" id="DateOfBirth" value="@DateTime.Today.ToString("yyyy-MM-dd")">
+            <span asp-validation-for="RegisterEmployeeModel.DateOfBirth" class="text-danger"></span>
+        </div>
+    </div>
+    <div class="row mb-3">
+        <div class="col-6">
+            <div class="form-group">
+                <label asp-for="RegisterEmployeeModel.PhoneNumber" for="PhoneNumber" class="form-label">Phone Number</label>
+                <input asp-for="RegisterEmployeeModel.PhoneNumber" type="text" class="form-control bg-dark rounded-3 border-info text-white" id="PhoneNumber" placeholder="xx xxx xxxx">
+                <span asp-validation-for="RegisterEmployeeModel.PhoneNumber" class="text-danger"></span>
+                <div class="valid-feedback">
+                    Looks good!
+                </div>
+            </div>
+        </div>
+        <div class="col-6">
+            <div class="form-group">
+                <label asp-for="RegisterEmployeeModel.EmailAddress" for="EmailAddress" class="form-label">Email Address</label>
+                <input asp-for="RegisterEmployeeModel.EmailAddress" type="email" class="form-control bg-dark rounded-3 border-info text-white" id="EmailAddress" placeholder="Email Address">
+                <span asp-validation-for="RegisterEmployeeModel.EmailAddress" class="text-danger"></span>
+                <div class="valid-feedback">
+                    Looks good!
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row mb-5">
+        <div class="col-6">
+            <div class="form-group">
+                <label asp-for="RegisterEmployeeModel.Password" for="Password" class="form-label">Password</label>
+                <input asp-for="RegisterEmployeeModel.Password" type="password" class="form-control bg-dark rounded-3 border-info text-white" id="Password" placeholder="Password">
+                <span asp-validation-for="RegisterEmployeeModel.Password" class="text-danger"></span>
+                <div class="valid-feedback">
+                    Looks good!
+                </div>
+            </div>
+        </div>
+        <div class="col-6">
+            <div class="form-group">
+                <label asp-for="RegisterEmployeeModel.ConfirmPassword" for="ConfirmPassword" class="form-label">Confirm Password</label>
+                <input asp-for="RegisterEmployeeModel.ConfirmPassword" type="password" class="form-control bg-dark rounded-3 border-info text-white" id="ConfirmPassword" placeholder="Confirm Password">
+                <span asp-validation-for="RegisterEmployeeModel.ConfirmPassword" class="text-danger"></span>
+                <div class="valid-feedback">
+                    Looks good!
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="d-grid justify-content-start">
+        <button type="submit" class="btn btn-lg btn-info text-dark rounded-3" id="SignUpEmployeeButton">
+            Sign Up
+        </button>
+    </div>
 </form>
+
+<div class="modal fade" id="EmployeeSuccessModal">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content bg-light">
+            <div class="modal-header border-0">
+                <button type="button" class="btn-close btn-close-dark" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <div class="row mb-3">
+                    <div class="col text-center">
+                        <h3 class="text-success text-wrap">
+                            Thanks! Your account has been successfully created.
+                        </h3>
+                    </div>
+                </div>
+
+                <div class="row mb-3">
+                    <div class="col text-center">
+                        <p class="text-secondary text-wrap">
+                            Please check your inbox, a code is sent on your email address,
+                            which will be required for company authorization.
+                        </p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-4 d-grid mx-auto">
+                        <button type="button" class="btn btn-lg sucess-button-background rounded-pill" data-bs-dismiss="modal">OK</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
