--- a/CyberTutorial.WebApp/Views/Shared/Login/LoginPartial.cshtml
+++ b/CyberTutorial.WebApp/Views/Shared/Login/LoginPartial.cshtml
@@ -63,5 +63,5 @@
     </div>
 </div>
 
-@Html.Hidden("RedirectToEmployee", Url.Action("Index", "Employee"));
-@Html.Hidden("RedirectToCompany", Url.Action("Index", "Company"));
+@Html.Hidden("RedirectToEmployee", Url.Action("Index", "Employee"))
+@Html.Hidden("RedirectToCompany", Url.Action("Index", "Company"))
