--- a/CyberTutorial.WebApp/Views/Shared/_Layout.cshtml
+++ b/CyberTutorial.WebApp/Views/Shared/_Layout.cshtml
@@ -6,8 +6,9 @@
     <title>@ViewData["Title"] - Cyber Tutorial</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/CyberTutorial.WebApp.styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/lib/font-awesome/css/all.css" />
+    <link rel="stylesheet" href="~/CyberTutorial.WebApp.styles.css" />
+   
 </head>
 
 <body class="d-flex flex-column h-100">
@@ -102,7 +103,7 @@
             </div>
         </div>
     </footer>
-    <script src="~/lib/Chart.js/chart.js"></script>
+    
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
