--- a/CyberTutorial.WebApp/Views/Employee/Index.cshtml
+++ b/CyberTutorial.WebApp/Views/Employee/Index.cshtml
@@ -1,7 +1,234 @@
 ﻿@model EmployeeModel
 @{
+    ViewData["Title"] = "Employee";
     Layout = "EmployeeLayout";
 }
+
+<!--title-->
+<div class="row mb-2">
+    <div class="col-md-12">
+        <h4 class="text-white">Dashboard</h4>
+    </div>
+</div>
+<!--title-->
+
+<!--cards-->
+<div class="row mb-2">
+    <div class="col-md-3 mb-3">
+        <div class="card bg-success text-white h-100">
+            <div class="card-body py-5">Total Courses</div>
+            <div class="card-footer d-flex">
+                View Details
+                <span class="ms-auto">
+                    <i class="bi bi-chevron-right"></i>
+                </span>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-3 mb-3">
+        <div class="card bg-info text-black h-100">
+            <div class="card-body py-5">Total Quizzes</div>
+            <div class="card-footer d-flex">
+                View Details
+                <span class="ms-auto">
+                    <i class="bi bi-chevron-right"></i>
+                </span>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-3 mb-3">
+        <div class="card bg-warning text-black h-100">
+            <div class="card-body py-5">Library Updates</div>
+            <div class="card-footer d-flex">
+                View Details
+                <span class="ms-auto">
+                    <i class="bi bi-chevron-right"></i>
+                </span>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-3 mb-3">
+        <div class="card bg-danger text-white h-100">
+            <div class="card-body py-5">Current Performance</div>
+            <div class="card-footer d-flex">
+                View Details
+                <span class="ms-auto">
+                    <i class="bi bi-chevron-right"></i>
+                </span>
+            </div>
+        </div>
+    </div>
+</div>
+<!--cards-->
+
+<!--charts & notifications-->
+<div class="row mb-2">
+    <div class="col-md-4 mb-3">
+        <div class="card h-100">
+            <div class="card-header">
+                <span class="me-2"><i class="fa-solid fa-fw fa-chart-bar"></i></span>
+                Employee Performance
+            </div>
+            <div class="card-body">
+                <canvas class="chart" width="400" height="200"></canvas>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-4 mb-3">
+        <div class="card h-100">
+            <div class="card-header">
+                <span class="me-2"><i class="fa-solid fa-fw fa-chart-bar"></i></span>
+                Employee Result
+            </div>
+            <div class="card-body">
+                <canvas class="chart" width="400" height="200"></canvas>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-4 mb-3">
+        <div class="card h-100">
+            <div class="card-header">
+                <span class="me-2"><i class="fa-solid fa-fw fa-message"></i></span>
+                Notifications
+            </div>
+            <div class="card-body">
+                <div class="list-group scroll-bar">
+                    <a href="#" class="list-group-item list-group-item-action active" aria-current="true">
+                        <div class="d-flex w-100 justify-content-between">
+                            <h6 class="mb-1">List group item heading</h6>
+                            <small>3 days ago</small>
+                        </div>
+                        <p class="mb-1">Some placeholder content in a paragraph.</p>
+                        <small>And some small print.</small>
+                    </a>
+                    <a href="#" class="list-group-item list-group-item-action" aria-current="true">
+                        <div class="d-flex w-100 justify-content-between">
+                            <h6 class="mb-1">List group item heading</h6>
+                            <small>3 days ago</small>
+                        </div>
+                        <p class="mb-1">Some placeholder content in a paragraph.</p>
+                        <small>And some small print.</small>
+                    </a>
+                    <a href="#" class="list-group-item list-group-item-action" aria-current="true">
+                        <div class="d-flex w-100 justify-content-between">
+                            <h6 class="mb-1">List group item heading</h6>
+                            <small>3 days ago</small>
+                        </div>
+                        <p class="mb-1">Some placeholder content in a paragraph.</p>
+                        <small>And some small print.</small>
+                    </a>
+                    <a href="#" class="list-group-item list-group-item-action" aria-current="true">
+                        <div class="d-flex w-100 justify-content-between">
+                            <h6 class="mb-1">List group item heading</h6>
+                            <small>3 days ago</small>
+                        </div>
+                        <p class="mb-1">Some placeholder content in a paragraph.</p>
+                        <small>And some small print.</small>
+                    </a>
+                    <a href="#" class="list-group-item list-group-item-action" aria-current="true">
+                        <div class="d-flex w-100 justify-content-between">
+                            <h6 class="mb-1">List group item heading</h6>
+                            <small>3 days ago</small>
+                        </div>
+                        <p class="mb-1">Some placeholder content in a paragraph.</p>
+                        <small>And some small print.</small>
+                    </a>
+                    <a href="#" class="list-group-item list-group-item-action" aria-current="true">
+                        <div class="d-flex w-100 justify-content-between">
+                            <h6 class="mb-1">List group item heading</h6>
+                            <small>3 days ago</small>
+                        </div>
+                        <p class="mb-1">Some placeholder content in a paragraph.</p>
+                        <small>And some small print.</small>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!--charts & notifications-->
+
+<!-- tables -->
+<div class="row">
+    <div class="col-md-12 mb-3">
+        <div class="card">
+            <div class="card-header">
+                <span><i class="fa-solid fa-fw fa-table me-2"></i></span> Top Employees
+            </div>
+            <div class="card-body">
+                <div class="table-responsive">
+                    <table id="example"
+                           class="table table-striped data-table"
+                           style="width: 100%">
+                        <thead>
+                            <tr>
+                                <th>Name</th>
+                                <th>Position</th>
+                                <th>Office</th>
+                                <th>Age</th>
+                                <th>Start date</th>
+                                <th>Salary</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>Hermione Butler</td>
+                                <td>Regional Director</td>
+                                <td>London</td>
+                                <td>47</td>
+                                <td>2011/03/21</td>
+                                <td>$356,250</td>
+                            </tr>
+                            <tr>
+                                <td>Lael Greer</td>
+                                <td>Systems Administrator</td>
+                                <td>London</td>
+                                <td>21</td>
+                                <td>2009/02/27</td>
+                                <td>$103,500</td>
+                            </tr>
+                            <tr>
+                                <td>Jonas Alexander</td>
+                                <td>Developer</td>
+                                <td>San Francisco</td>
+                                <td>30</td>
+                                <td>2010/07/14</td>
+                                <td>$86,500</td>
+                            </tr>
+                            <tr>
+                                <td>Shad Decker</td>
+                                <td>Regional Director</td>
+                                <td>Edinburgh</td>
+                                <td>51</td>
+                                <td>2008/11/13</td>
+                                <td>$183,000</td>
+                            </tr>
+                            <tr>
+                                <td>Michael Bruce</td>
+                                <td>Javascript Developer</td>
+                                <td>Singapore</td>
+                                <td>29</td>
+                                <td>2011/06/27</td>
+                                <td>$183,000</td>
+                            </tr>
+                            <tr>
+                                <td>Donna Snider</td>
+                                <td>Customer Support</td>
+                                <td>New York</td>
+                                <td>27</td>
+                                <td>2011/01/25</td>
+                                <td>$112,000</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- tables-->
+
+
 <div class="toast-container position-absolute p-3 top-0 end-0 mt-5">
     <div class="toast" id="LogoutErrorToast">
         <div class="toast-header">
@@ -15,4 +242,4 @@
     </div>
 </div>
 
-@Html.Hidden("RedirectToHome", Url.Action("Index", "Home"));
+@Html.Hidden("RedirectToHome", Url.Action("Index", "Home"))
