--- a/CyberTutorial.WebApp/Views/Shared/EmployeeLayout.cshtml
+++ b/CyberTutorial.WebApp/Views/Shared/EmployeeLayout.cshtml
@@ -1,23 +1,230 @@
 ﻿<!DOCTYPE html>
-<html lang="en" class="em-html">
+<html lang="en">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - Cyber Tutorial</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/CyberTutorial.WebApp.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/employee.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/lib/font-awesome/css/all.css" />
+    @*<link rel="stylesheet" href="~/lib/datatables.net-bs5/dataTables.bootstrap5.min.css" />*@
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/bs5/dt-1.12.1/datatables.min.css" />
 </head>
 
-<body class="em-body">
-    @RenderBody()
+<body class="d-flex flex-column min-vh-100">
+    <header>
+        <!-- top navigation bar -->
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+            <div class="container-fluid">
+                <button class="navbar-toggler"
+                        type="button"
+                        data-bs-toggle="offcanvas"
+                        data-bs-target="#sidebar"
+                        aria-controls="offcanvasExample">
+                    <span class="navbar-toggler-icon" data-bs-target="#sidebar"></span>
+                </button>
+                <a class="navbar-brand me-auto ms-lg-0 ms-3 text-uppercase fw-bold" href="#">Cyber Tutorial</a>
+                <button class="navbar-toggler"
+                        type="button"
+                        data-bs-toggle="collapse"
+                        data-bs-target="#topNavBar"
+                        aria-controls="topNavBar"
+                        aria-expanded="false"
+                        aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="topNavBar">
+                    <form class="d-flex ms-auto my-3 my-lg-0">
+                        <div class="input-group">
+                            <input class="form-control"
+                                   type="search"
+                                   placeholder="Search"
+                                   aria-label="Search" />
+                            <button class="btn btn-primary" type="submit">
+                                <i class="fa fa-search"></i>
+                            </button>
+                        </div>
+                    </form>
+                    <ul class="navbar-nav">
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle ms-2"
+                               href="#"
+                               role="button"
+                               data-bs-toggle="dropdown"
+                               aria-expanded="false">
+                                <i class="fa-solid fa-user"></i>
+                            </a>
+                            <ul class="dropdown-menu dropdown-menu-end dropdown-menu-dark mt-1">
+                                <li><a class="dropdown-item" href="#">Account</a></li>
+                                <li><a class="dropdown-item" href="#">Edit Account</a></li>
+                                <li><a class="dropdown-item" href="#">Logout</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        <!-- top navigation bar -->
+        <!-- offcanvas -->
+        <div class="offcanvas offcanvas-start sidebar-nav bg-dark" tabindex="-1" id="sidebar">
+            <div class="offcanvas-body p-0">
+                <div class="container mb-3 mt-3 px-3">
+                    <div class="text-muted small fw-bold text-uppercase">
+                        <i class="fa-solid fa-user fa-fade"></i>
+                        Employee Name
+                    </div>
+                    <div class="text-white small pb-2">
+                        Mohammed Ahmed
+                    </div>
+                </div>
+                <div class="my-4"><hr class="dropdown-divider bg-light" /></div>
+                <nav class="navbar-dark">
+                    <ul class="navbar-nav">
+                        <li>
+                            <div class="text-muted small fw-bold text-uppercase px-3 mb-1">
+                                GENERAL
+                            </div>
+                        </li>
+                        <li>
+                            <a href="#" class="nav-link px-3 sidebar-link active mb-2">
+                                <span class="me-3"><i class="fa-solid fa-fw fa-dashboard"></i></span>
+                                <span>Dashboard</span>
+                            </a>
+                        </li>
+                        <li>
+                            <div class="text-muted small fw-bold text-uppercase px-3 mt-3 mb-1">
+                                Education
+                            </div>
+                        </li>
+                        <li>
+                            <a class="nav-link px-3 sidebar-link mb-1" data-bs-toggle="collapse" href="#courses">
+                                <span class="me-3"><i class="fa fa-fw fa-book"></i></span>
+                                <span>Courses</span>
+                                <span class="ms-auto">
+                                    <span class="right-icon">
+                                        <i class="fa fa-chevron-down"></i>
+                                    </span>
+                                </span>
+                            </a>
+                            <div class="collapse" id="courses">
+                                <ul class="navbar-nav">
+                                    <li>
+                                        <a href="#" class="nav-link px-3 sidebar-link">
+                                            <span class="me-3"><i class="fa fa-fw"></i></span>
+                                            <span>Available Courses</span>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#" class="nav-link px-3 sidebar-link">
+                                            <span class="me-3"><i class="fa fa-fw"></i></span>
+                                            <span>Attempted Courses</span>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </li>
+                        <li>
+                            <a class="nav-link px-3 sidebar-link mb-2" data-bs-toggle="collapse" href="#quizzes">
+                                <span class="me-3"><i class="fa-solid fa-fw fa-file-circle-check"></i></span>
+                                <span>Quizzes</span>
+                                <span class="ms-auto">
+                                    <span class="right-icon">
+                                        <i class="fa fa-chevron-down"></i>
+                                    </span>
+                                </span>
+                            </a>
+                            <div class="collapse" id="quizzes">
+                                <ul class="navbar-nav">
+                                    <li>
+                                        <a href="#" class="nav-link px-3 sidebar-link">
+                                            <span class="me-3"><i class="fa fa-fw"></i></span>
+                                            <span>Available Quizzes</span>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#" class="nav-link px-3 sidebar-link">
+                                            <span class="me-3"><i class="fa fa-fw"></i></span>
+                                            <span>Attempted Quizzess</span>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#" class="nav-link px-3 sidebar-link">
+                                            <span class="me-3"><i class="fa fa-fw"></i></span>
+                                            <span>Passed Quizzess</span>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#" class="nav-link px-3 sidebar-link">
+                                            <span class="me-3"><i class="fa fa-fw"></i></span>
+                                            <span>Failed Quizzess</span>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="text-muted small fw-bold text-uppercase px-3 mt-3 mb-1">
+                                Tools
+                            </div>
+                        </li>
+                        <li>
+                            <a href="#" class="nav-link px-3 sidebar-link mb-1">
+                                <span class="me-3"><i class="fa-solid fa-fw fa-school"></i></span>
+                                <span>Library</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a class="nav-link px-3 sidebar-link mb-2" data-bs-toggle="collapse" href="#account">
+                                <span class="me-3"><i class="fa-solid fa-fw fa-gear"></i></span>
+                                <span>Account</span>
+                                <span class="ms-auto">
+                                    <span class="right-icon">
+                                        <i class="fa fa-chevron-down"></i>
+                                    </span>
+                                </span>
+                            </a>
+                            <div class="collapse" id="account">
+                                <ul class="navbar-nav">
+                                    <li>
+                                        <a href="#" class="nav-link px-3 sidebar-link">
+                                            <span class="me-3"><i class="fa fa-fw"></i></span>
+                                            <span>View Account</span>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#" class="nav-link px-3 sidebar-link">
+                                            <span class="me-3"><i class="fa fa-fw"></i></span>
+                                            <span>Edit Account</span>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+        <!-- offcanvas -->
+    </header>
+    <main class="mt-5 pt-3">
+        <div class="container-fluid">
+            @RenderBody()
+        </div>
+    </main>
 
-    <script src="~/lib/Chart.js/chart.js"></script>
+    <footer class="mt-auto p-3 bg-dark">
+        <div class="container text-center text-muted pb-1">
+            <small>Copyright &copy; CyberTutorials</small>
+        </div>
+    </footer>
+
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
     <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
+   @* <script src="~/lib/datatables.net-bs5/dataTables.bootstrap5.min.js"></script>*@
+    <script type="text/javascript" src="https://cdn.datatables.net/v/bs5/dt-1.12.1/datatables.min.js"></script>
+    <script src="~/lib/Chart.js/chart.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
